--- a/public/css/model.css
+++ b/public/css/model.css
@@ -1,12 +1,13 @@
 model-viewer{
-    height: 100%;
+    min-height: 100vh;
+    min-width: 100%;
 }
 .row{
-    height: 100%;
+    min-height: 100vh;
 }
 .styled-col{
     background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 20px;
-    margin-right: 20px;
-    padding: 20px;
+    border-radius: 2rem;
+    margin-right: 2rem;
+    padding: 2rem;
 }
