--- a/views/astronaut.ejs
+++ b/views/astronaut.ejs
@@ -11,10 +11,14 @@
 <body>
     <div class="container-custom text-white">
         <div class="row">
-            <div class="col-4 d-flex flex-row justify-content-center align-items-center">
+
+
+            <div class="col-12 col-md-6 d-flex flex-row justify-content-center align-items-center">
                 <model-viewer id="glbAstro" camera-controls></model-viewer>
             </div>
-            <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+
+
+            <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
                 <div class="styled-col">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas dolor fuga, possimus molestiae, quidem quis quam rerum expedita cumque aliquid placeat pariatur! Dolorem maiores rem quia nisi adipisci accusantium dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, magni dolorem fugit, ex nostrum alias, sit provident tempora maxime saepe consequatur reiciendis a velit. Officiis reiciendis quibusdam ipsum minima provident.</p>
@@ -31,6 +35,8 @@
                 <a href="/project" class="btn btn-success mt-3">Go back to All Ideas</a>
             </div>
             
+
+
         </div>
     </div>
 
