--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,10 +10,12 @@
 <body class="">
     <div id="container" class="text-white p-3 d-flex flex-column mx-auto">
         <%- include("./partials/navbar") %>
-        <main class="text-center w-50">
-            <h1>Nanotechnology</h1>
-            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit eos voluptatibus excepturi tempora provident! Voluptatem itaque delectus ullam beatae quo vel tempora totam tempore, sed commodi. Officia porro assumenda omnis?</p>
-            <a class="btn btn-success" href="/project">Learn More about this Project</a>
+        <main class="text-center d-flex justify-content-center justify-content-md-start">
+            <div class="w-50">
+                <h1>Nanotechnology</h1>
+                <p class="lead">Building Tomorrow, Atom by Atom.</p>
+                <a class="btn btn-success" href="/project">Learn More</a>
+            </div>
         </main>
         <footer class="mt-auto text-center">
             &copy; Team Innovators 2024
