--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
-<header class="mb-auto mx-auto">
-  <div class="nav float-md-end">
+<header class="mb-auto mx-auto  ">
+  <div class="nav d-flex justify-content-center justify-content-md-end">
       <a href="/" class="nav-link active">Home</a>
       <a href="/about" class="nav-link">About Us</a>
   </div>
