--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,10 +3,8 @@ model-viewer{
     width: 600px;
 }
 
-body, html{
-    height: 100%;
-    
-    
+body { 
+    min-height: 100vh;
 }
 
 
@@ -15,8 +13,8 @@ body, html{
     url("https://pbs.twimg.com/media/GBgDOHtbsAAkMZc.jpg:large");
     background-position: center;
     background-size: cover;
-    width: 100%;
-    height: 100%;
+    min-height: 100vh;
+    min-width: 100vw;
     background-position: center;
     background-size: cover;
 }
@@ -39,8 +37,8 @@ header {
 }
 
 .container-custom {
-    height: 100%;
-    width: 100%;
+    min-height: 100vh;
+    min-width: 100vw;
     background-color:#e0e0e0;
     background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
     url("https://images.unsplash.com/photo-1611107875582-684c70574042?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
@@ -49,11 +47,9 @@ header {
 }
 
 .card{
-    
     margin-top: 10px;
     margin-bottom:10px;
     border-radius: 20px;
-    width: 18rem;
 }
 
 #row1{
@@ -69,4 +65,9 @@ header {
     width: 50px;
     height: 50px;
     margin-right: 10px;
+}
+
+.btn-model {
+
+    width: 60%;
 }
