--- a/views/pcb.ejs
+++ b/views/pcb.ejs
@@ -3,32 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NanoImplementation in MicronChips</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/model.css">
+    <link type="text/css" href="/css/styles.css" rel="stylesheet"/>
 </head>
 <body>
     <div class="container-custom text-white">
-        <div class="row">
-            <div class="col-4 d-flex flex-row justify-content-center align-items-center">
+
+        <div class="row d-flex flex-row align-items-center">
+            <div class="col-lg-6 d-flex flex-row justify-content-center align-items-center">
                 <model-viewer id="glbPcb" camera-controls></model-viewer>
             </div>
-            <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+            <div class="col-lg-6 d-flex flex-column justify-content-center align-items-center">
                 <div class="styled-col">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas dolor fuga, possimus molestiae, quidem quis quam rerum expedita cumque aliquid placeat pariatur! Dolorem maiores rem quia nisi adipisci accusantium dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, magni dolorem fugit, ex nostrum alias, sit provident tempora maxime saepe consequatur reiciendis a velit. Officiis reiciendis quibusdam ipsum minima provident.</p>
-                    <hr>
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas dolor fuga, possimus molestiae, quidem quis quam rerum expedita cumque aliquid placeat pariatur! Dolorem maiores rem quia nisi adipisci accusantium dolor. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse minus, deserunt quos dolorum provident ducimus necessitatibus impedit, officiis reiciendis autem laborum? Cumque praesentium aspernatur eligendi voluptatem magnam, ducimus ratione nesciunt.</p>
-                    <hr>
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas dolor fuga, possimus molestiae, quidem quis quam rerum expedita cumque aliquid placeat pariatur! Dolorem maiores rem quia nisi adipisci accusantium dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum porro iusto minus commodi voluptatibus sed ipsum temporibus. Illum corporis beatae unde, aperiam aliquam culpa amet, totam dignissimos, esse blanditiis optio.</p>
-                    <hr>
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas dolor fuga, possimus molestiae, quidem quis quam rerum expedita cumque aliquid placeat pariatur! Dolorem maiores rem quia nisi adipisci accusantium dolor. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo veritatis unde cumque quasi? Et quia omnis ut quibusdam at, doloremque deserunt facilis consequatur, obcaecati eum illo odio delectus, sunt est.</p>
+                        <h1 class="text-center">Nano Enhancements in Micron Chips</h1>
+                        <hr>
+                        <h3>Miniaturization</h3>
+                        <p>Nanotechnology enables the creation of smaller and more efficient components, allowing micron chips to become smaller while maintaining or even enhancing their processing capabilities.</p>
+                        <hr>
+
+                        <h3>Enhanced Performance</h3>
+                        <p>The use of nanomaterials in micron chips improves overall performance, leading to faster processing speeds, increased computational power, and reduced energy consumption.</p>
+                        <hr>    
+
+                        <h3>Increased Storage Capacity</h3>
+                        <p>Advances in nanotechnology provide materials with higher storage density, enabling micron chips to store larger amounts of data in smaller physical spaces.</p>
+                        <hr>
+
+                        <h3>Advanced Quantum Computing</h3>
+                        <p>Nanotechnology plays a crucial role in the development of quantum dots and quantum tunneling devices, bringing forth the potential integration of quantum computing principles into micron chips.</p>
+                    </div>
+                <div class="text-center">
+                    <a href="/project/micronchip/video" class="btn btn-primary my-2">Watch implementation video</a>
+                    <a href="/project" class="btn btn-success my-2">Go back to all ideas</a>
                 </div>
-                <a href="/project" class="btn btn-success mt-3">Go back to All Ideas</a>
             </div>
         </div>
     </div>
@@ -39,7 +49,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 
+    <script src="/js/script.js"></script>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.3.0/model-viewer.min.js"></script>
-    <script src="/js/pcb.js"></script>  
-</body>
-</html>
+     <script src="/js/pcb.js"></script>   
+ </body>
+</html> 
