--- a/views/project.ejs
+++ b/views/project.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>All Ideas and Implementations</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/index.css">
 </head>
@@ -24,7 +24,7 @@
                     <model-viewer id="glbAstro" class="card-img-top" camera-controls></model-viewer>
                     <div class="card-body">
                       <h5 class="card-title text-center">Space Suit</h5>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur fugit, provident repellendus necessitatibus est amet perferendis eos placeat nesciunt tempore quae minima sapiente, corrupti quod culpa quaerat velit dolorum illum.</p>
+                      <p class="card-text">Nano-enhanced space suits offer superior durability, temperature control, and radiation protection, revolutionizing astronaut safety in space exploration.</p>
                       <div class="d-flex justify-content-center align-items-center">
                         <a href="/project/astronaut" class="btn btn-primary d-flex justify-content-center btn-model">View</a>
                     </div>
@@ -38,7 +38,7 @@
                     <model-viewer id="glbPcb" class="card-img-top" camera-controls></model-viewer>
                     <div class="card-body">
                       <h5 class="card-title text-center">Micron Chip</h5>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis mollitia doloremque corporis nostrum quidem magnam quam, omnis aperiam, aliquam vero veniam dignissimos. Voluptates voluptate reprehenderit libero obcaecati pariatur asperiores iusto.</p>
+                      <p class="card-text">Nanotech transforms micron chips for smaller, more powerful computing with advanced processing and energy efficiency.</p>
                       <div class="d-flex justify-content-center align-items-center">
                           <a href="/project/micronchip" class="btn btn-primary d-flex justify-content-center btn-model">View</a>
                       </div>
