--- a/views/astronaut.ejs
+++ b/views/astronaut.ejs
@@ -3,40 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NanoImplementation in Space Suits</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/model.css">
 </head>
 <body>
     <div class="container-custom text-white">
-        <div class="row">
 
-
-            <div class="col-12 col-md-6 d-flex flex-row justify-content-center align-items-center">
+        <div class="row d-flex flex-row align-items-center">
+            <div class="col-lg-6 d-flex flex-row justify-content-center align-items-center">
                 <model-viewer id="glbAstro" camera-controls></model-viewer>
             </div>
-
-
-            <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+            <div class="col-lg-6 p-2 d-flex flex-column justify-content-center align-items-center">
                 <div class="styled-col">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas dolor fuga, possimus molestiae, quidem quis quam rerum expedita cumque aliquid placeat pariatur! Dolorem maiores rem quia nisi adipisci accusantium dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, magni dolorem fugit, ex nostrum alias, sit provident tempora maxime saepe consequatur reiciendis a velit. Officiis reiciendis quibusdam ipsum minima provident.</p>
-                    <hr>
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas dolor fuga, possimus molestiae, quidem quis quam rerum expedita cumque aliquid placeat pariatur! Dolorem maiores rem quia nisi adipisci accusantium dolor. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse minus, deserunt quos dolorum provident ducimus necessitatibus impedit, officiis reiciendis autem laborum? Cumque praesentium aspernatur eligendi voluptatem magnam, ducimus ratione nesciunt.</p>
-                    <hr>
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas dolor fuga, possimus molestiae, quidem quis quam rerum expedita cumque aliquid placeat pariatur! Dolorem maiores rem quia nisi adipisci accusantium dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum porro iusto minus commodi voluptatibus sed ipsum temporibus. Illum corporis beatae unde, aperiam aliquam culpa amet, totam dignissimos, esse blanditiis optio.</p>
-                    <hr>
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas dolor fuga, possimus molestiae, quidem quis quam rerum expedita cumque aliquid placeat pariatur! Dolorem maiores rem quia nisi adipisci accusantium dolor. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo veritatis unde cumque quasi? Et quia omnis ut quibusdam at, doloremque deserunt facilis consequatur, obcaecati eum illo odio delectus, sunt est.</p>
+                        <h1 class="text-center">Nano Enhancements for Space</h1>
+                        <hr>
+                        <h3>Improved Material Strength and Durability</h3>
+                        <p>Nanotechnology allows for the development of advanced materials with enhanced strength-to-weight ratios. By incorporating nanomaterials into the fabric of space suits, they can become more durable and resilient, offering better protection against micrometeoroids, radiation, and other hazards in space.</p>
+                        <hr>
+
+                        <h3>Smart Fabrics for Temperature Regulation</h3>
+                        <p>Nanotechnology enables the creation of smart fabrics with embedded sensors and responsive elements. These materials can regulate temperature by adjusting insulation properties based on external conditions. This is crucial for space suits, as astronauts experience extreme temperature variations in space, from intense heat when exposed to the sun, to cold temperatures in the shadow of celestial bodies.</p>
+                        <hr>
+
+                        <h3>Self-Healing Materials</h3>
+                        <p>Nanomaterials can be designed to possess self-healing properties. Incorporating such materials into space suits can help mitigate the risks of damage from impacts or wear and tear. Self-healing capabilities could automatically repair small punctures or tears, ensuring the integrity of the suit over extended missions.</p>
                 </div>
-                <a href="/project" class="btn btn-success mt-3">Go back to All Ideas</a>
+                <div class="text-center">
+                    <a href="/project" class="btn btn-success">Go back to all ideas</a>
+                </div>
             </div>
-            
-
-
         </div>
     </div>
 
