--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/index.css">
 </head>
@@ -17,9 +17,8 @@
                 <a class="btn btn-success" href="/project">Learn More</a>
             </div>
         </main>
-        <footer class="mt-auto text-center">
-            &copy; Team Innovators 2024
-        </footer>
+        <%- include("./partials/footer") %>
+
     </div>
     
 
