--- a/views/pcbvideo.ejs
+++ b/views/pcbvideo.ejs
@@ -10,13 +10,18 @@
     <link rel="stylesheet" href="/css/pcb-video.css">
 </head>
 <body>
-    <div class="container-custom">
-        <div class="pcb-video">
-            <video controls autoplay muted src="https://res.cloudinary.com/ddmjczaqq/video/upload/v1706939077/video-for-research-project/res-video_pmmmza.mp4"></video>
+    <div class="container-custom d-flex flex-column justify-content-center align-items-center">
+        <div class="row d-flex flex-column justify-content-center align-items-center">
+            <div class="col-sm-8 col-md-10 col-lg-12 d-flex flex-column justify-content-center">
+                <div class="pcb-video">
+                    <video controls autoplay muted src="https://res.cloudinary.com/ddmjczaqq/video/upload/v1706939077/video-for-research-project/res-video_pmmmza.mp4"></video>
+                </div>
+                <div class="text-center">
+                    <a href="/project/micronchip" class="btn btn-success">Go back</a>
+                </div>
+            </div>
         </div>
-        <div class="text-center">
-            <a href="/project/micronchip" class="btn btn-success">Go back</a>
-        </div>
+        
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
