Added video credits

--- a/views/pcbvideo.ejs
+++ b/views/pcbvideo.ejs
@@ -16,6 +16,9 @@
                 <div class="pcb-video">
                     <video controls autoplay muted src="https://res.cloudinary.com/ddmjczaqq/video/upload/v1706939077/video-for-research-project/res-video_pmmmza.mp4"></video>
                 </div>
+                <div class="text-center text-white">
+                    <p>Animation by: Mahek Lingwat</p>
+                </div>
                 <div class="text-center">
                     <a href="/project/micronchip" class="btn btn-success">Go back</a>
                 </div>
